--- a/manifest.json
+++ b/manifest.json
@@ -8,6 +8,14 @@
   "http://ajax.googleapis.com/*",
   "http://*.google.com/*"
  ],
+ "icons": {
+    "16": "icons/16.png",
+    "32": "icons/32.png",
+    "48": "icons/48.png",
+    "64": "icons/64.png",
+    "128": "icons/128.png",
+    "256": "icons/tranlation.png"
+ },
  "content_scripts": [{
     "matches": ["http://*/*"],
     "js": ["script.js"],
