Manifest updated to meet new Chrome Store req.
Manifest updated to meet new Chrome Store requirements
drawIcon now uses path instead of image data
Inline scripts and function call moved to external JS

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,10 @@
     "name": "URL Simplify",
     "version": "2.0.3",
     "description": "Simplify url with goo.gl, bit.ly, clck.ru, u.to or is.gd",
-    "background_page": "simplify.html",
+    "manifest_version": 2,
+    "background": {
+        "page": "simplify.html"
+    },
     "options_page": "options.html",
     "permissions": [
         "tabs",
